# libmesh

./: .clang-format  .coverage  .gitignore  .gitmodules  .mailmap  AUTHORS  CITATION  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  bootstrap  clang-format  configure  configure.ac  fsanitize_ignorelist.txt  plot_shape.py
branches/libmesh.automake/: .gitignore  Make.common.in  Makefile.am  Makefile.in  aclocal.m4  bootstrap  configure  configure.ac  libmesh.pc.in
contrib/: Make.common  Makefile.am  Makefile.in
contrib/boost/: .gitignore  Makefile.test_boost  README  boost_copy.sh  test_boost.cc
contrib/capnproto/: Makefile.am  Makefile.in  rb_data.capnp
contrib/eigen/: Makefile.am  Makefile.in  eigen
contrib/exodusii/: v5.22
contrib/fparser/: Faddeeva.cc  Faddeeva.hh  Makefile.am  Makefile.in  Makefile.orig  README.rebuild_fpoptimizer  fparser.cc  fparser.hh  fparser_ad.cc  fparser_ad.hh  fpoptimizer.cc  ignore_opcode_warnings.hh  restore_opcode_warnings.hh  run_full_release_testing.sh  testbed.cc  testbed_tests.inc
contrib/gmv/: Makefile.in  gmvread.c
contrib/gzstream/: Makefile.am  Makefile.in  gzstream.C
contrib/laspack/: CODE_CHANGES  Makefile.in  factor.C  itersolv.C  matrix.C  matrix.h  precond.C  qmatrix.C  qmatrix.h  qvector.C  qvector.h
contrib/libHilbert/: AUTHORS  Makefile.am  Makefile.in
contrib/metis/: LICENSE.txt  Makefile.am  Makefile.in
contrib/nanoflann/: CMakeLists.txt  Makefile.am  Makefile.in  README.md
contrib/nemesis/: v3.09  v5.22  v8.11
contrib/netcdf/: v4
contrib/netgen/: Makefile.am  Makefile.in
contrib/parmetis/: Makefile.am  Makefile.in
contrib/passmess/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap  configure  configure.ac  makerelease.sh
contrib/qhull/: Makefile.am  Makefile.in  qhull
contrib/sfcurves/: Makefile.am  Makefile.in  README  hilbert.c
contrib/tetgen/: Makefile.in  README  predicates.C  tetgen.h
contrib/timpi/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  makerelease.sh
contrib/triangle/: Makefile.am  Makefile.in  triangle.c
contrib/unique_ptr/: Makefile.am  Makefile.in  unique_ptr.hpp
contrib/utils/: Make.common.in  Makefile.in  libmesh-dbg.pc.in  libmesh-devel.pc.in  libmesh-oprof.pc.in  libmesh-opt.pc.in  libmesh-prof.pc.in  libmesh.spec
doc/html/: Makefile.am  Makefile.in  adaptivity_ex1.php  adaptivity_ex2.php  adaptivity_ex3.php  adaptivity_ex4.php  adaptivity_ex5.php  adjoints_ex1.php  adjoints_ex2.php  adjoints_ex3.php  adjoints_ex4.php  adjoints_ex5.php  developers.html  developers.php  doxygen_stylesheet.css  eigenproblems_ex1.php  eigenproblems_ex2.php  eigenproblems_ex3.php  examples.html  examples.php  externalsoftware.html  externalsoftware.php  fem_system_ex1.php  fem_system_ex2.php  index.html  index.php  installation.html  installation.php  introduction_ex1.php  introduction_ex2.php  introduction_ex3.php  introduction_ex4.php  introduction_ex5.php  miscellaneous_ex1.php  miscellaneous_ex3.php  miscellaneous_ex4.php  miscellaneous_ex5.php  miscellaneous_ex6.php  miscellaneous_ex7.php  miscellaneous_ex8.php  (+25 more)
examples/: Make.common  Makefile.am  Makefile.in  Makefile.old  run_common.sh
libmesh/: .cvsignore  .depend  .gitignore  CHANGELOG  CHANGES  Make.common.in  Makefile  Makefile.am  Makefile.const  Makefile.in  aclocal.m4  bootstrap  configure  configure.ac  configure.in  keywords  libtool
libmesh/autom4te.cache/: output.0  traces.2
libmesh/contrib/: Makefile
libmesh/doc/: .cvsignore  Doxyfile.in  footer.html  footer.php  header.html  header.php  stylesheet.css
libmesh/examples/: Make.common  Makefile  Makefile.am  Makefile.in  run_common.sh
libmesh/include/: .cvsignore  Makefile.in  boundary_data.h  boundary_info.h  boundary_mesh.h  cell.h  cell_hex.h  cell_hex20.h  cell_hex27.h  cell_hex8.h  cell_inf.h  cell_inf_hex.h  cell_inf_hex16.h  cell_inf_hex18.h  cell_inf_hex8.h  cell_inf_prism.h  cell_inf_prism12.h  cell_inf_prism6.h  cell_prism.h  cell_prism15.h  cell_prism18.h  cell_prism6.h  cell_pyramid.h  cell_pyramid5.h  cell_tet.h  cell_tet10.h  cell_tet4.h  centroid_partitioner.h  coupling_matrix.h  data_map.h  dense_matrix.h  dense_matrix_base.h  dense_submatrix.h  dense_vector.h  dense_vector_base.h  distributed_vector.h  dof_map.h  dof_object.h  edge.h  edge_edge2.h  (+112 more)
libmesh/lib/: .cvsignore
libmesh/m4/: ax_boost_base.m4  compiler.m4  config_summary.m4  eigen.m4  fparser.m4  glpk.m4  gmv.m4  gz.m4  laspack.m4  libhilbert.m4  libmesh_compiler_features.m4  libmesh_optional_packages.m4  metis.m4  nemesis.m4  netcdf.m4  parmetis.m4  petsc.m4  precision.m4  prefix_config.m4  sfc.m4  slepc.m4  sstream.m4  tbb.m4  tecplot.m4  tetgen.m4  threads.m4  triangle.m4  trilinos.m4  unordered.m4  vtk.m4
libmesh/src/: libmesh_la_SOURCES  rebuild_libmesh_la_SOURCES.sh
libmesh/tests/: Makefile.am  Makefile.in
tests/: 1_quad.dyn  25_quad.bxt  Makefile.am  Makefile.in  driver.C  driver_kokkos.K  kokkos_scope.K  kokkos_scope.h  libmesh_cppunit.h  run_unit_tests.sh.in  stream_redirector.h  test_comm.h
tests/ad/: geometric_ad_test.C
tests/base/: auto_ptr_test.C  default_coupling_test.C  dof_map_test.C  dof_object_test.h  getpot_test.C  getpot_test.C.in  getpot_test_input.in  multi_evaluable_pred_test.C  nonmanifold_coupling_test.C  overlapping_coupling_test.C  point_neighbor_coupling_test.C  unique_ptr_test.C
tests/fe/: dual_shape_verification_test.C  fe_bernstein_test.C  fe_clough_test.C  fe_hermite_test.C  fe_hierarchic_test.C  fe_l2_hierarchic_test.C  fe_l2_lagrange_test.C  fe_lagrange_shape_verification_test.C  fe_lagrange_test.C  fe_monomial_test.C  fe_rational_map.C  fe_rational_test.C  fe_side_test.C  fe_szabab_test.C  fe_test.h  fe_xyz_test.C  inf_fe_jacobi_test.C  inf_fe_legendre_test.C  inf_fe_radial_test.C  kokkos_fe_contract_test.K  kokkos_fe_invariant_test.K  kokkos_fe_map_oracle_test.K  kokkos_fe_oracle_runners.h  kokkos_fe_oracle_test_utils.h  kokkos_fe_permuted_map_oracle_test.K  kokkos_fe_reconstruction_oracle_test.K  kokkos_fe_shape_oracle_test.K  (+5 more)
(+21362 files in other folders)
